# yvdebug

./: .gitignore  Makefile.am  README  README.md  configure.ac
data/: README  com.lonelycactus.yvdebug.desktop  headerbar.ui  help.ui  mainwindow.ui  shortcuts.ui  yvdebug.gresource.xml
module/: yvdebug.scm
module/yvdebug/: about.scm  errorlog.scm  files.scm  interpreter.scm  main.scm  shortcuts.scm  terminal.scm  typelib.scm
src/: yvdebug.in
